--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 
 spring.jpa.hibernate.ddl-auto=update
 
+spring.main.allow-circular-references=true
+
 
